js/src/tests/test262/built-ins/Error/prototype/stack/setter-non-extensible-receiver.js
































var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

var integrityLevels = [
  { name: 'preventExtensions', fn: Object.preventExtensions },
  { name: 'seal', fn: Object.seal },
  { name: 'freeze', fn: Object.freeze }
];

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];

  for (var j = 0; j < integrityLevels.length; ++j) {
    var level = integrityLevels[j];
    var label = Ctor.name + '/' + level.name;

    var err = new Ctor('msg');
    assert.sameValue(
      Object.prototype.hasOwnProperty.call(err, 'stack'),
      false,
      label + ': precondition: instance has no own "stack" property at construction'
    );

    level.fn(err);

    assert.throws(TypeError, function () {
      set.call(err, 'sentinel');
    }, label + ': instance without own "stack" rejects setter');

    assert.sameValue(
      Object.prototype.hasOwnProperty.call(err, 'stack'),
      false,
      label + ': no own "stack" property was created'
    );
  }
}


for (var k = 0; k < integrityLevels.length; ++k) {
  var lvl = integrityLevels[k];
  var obj = lvl.fn({});
  assert.throws(TypeError, function () {
    set.call(obj, 'sentinel');
  }, lvl.name + ' plain object without own "stack"');
}

reportCompare(0, 0);
